<resources>
    <string name="app_name">Nima</string>
    <!-- Strings related to login -->
    <string name="prompt_username">"Nombre de usuario"</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="invalid_username">"El email no es valido"</string>
    <string name="invalid_password">"La contraseña debe tener al menos 6 caracteres"</string>
    <string name="login_failed">"Login failed"</string>
    <!--    String related to welcome screen -->
    <string name="welcome">"Bienvenido a la aplicacion!"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">NIMA</string>
    <string name="nav_header_subtitle">nima@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Opciones</string>

    <string name="menu_home">Calendario</string>
    <string name="menu_gallery">Galeria</string>
    <string name="menu_slideshow">Contactos</string>
    <string name="formulario">Formulario</string>
    <string name="mapa">Mapa</string>
    <string name="lista_de_contactos">Lista de Contactos</string>
    <string name="nombre">Nombre</string>
    <string name="direccion">Direccion</string>
    <string name="telefono">Telefono</string>
    <string name="email">Email</string>
    <string name="siguiente">SIGUIENTE</string>
    <string name="clientes">Clientes</string>
    <string name="proveedores">Proveedores</string>
    <string name="producto">Producto</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="cliente">Cliente</string>
    <string name="proveedor">Proveedor</string>
    <string name="borrar">Borrar</string>
    <string name="vip">VIP</string>
    <string name="calendario">Calendario</string>
    <string name="lista_de_eventos">Lista de eventos</string>
    <string name="evento">Evento</string>
    <string name="descripcion">Descripcion</string>
    <string name="fecha">Fecha</string>
    <string name="selecciona_fecha">Selecciona Fecha</string>
    <!-- Preference Titles -->
    <string name="tema_oscuro">temaOscuro</string>
    <string name="auto_login">autoLogin</string>
    <string name="formato_fechas">formatoFechas</string>
    <string name="logout">Salir</string>
    <string name="logo_nima">Logo Nima</string>
    <string name="guardar_sesion">Guardar sesion</string>
    <string name="recuperar_contrase_a">Recuperar contraseña</string>
    <string name="splashscreen_con_logo_nima">SplashScreen con logo Nima</string>
    <string name="mostrar_ubicacion">Mostrar ubicacion</string>
    <string name="label_tema_oscuro">Tema oscuro</string>
    <string name="label_tema_defecto">Usar tema por defecto</string>
    <string name="tema_defecto">temaPorDefecto</string>
    <string name="tema">Tema</string>
    <string name="label_auto_login">Iniciar sesion automaticamente</string>
    <string name="label_formato_fechas">Formato de las fechas</string>
    <string name="formato">Formato</string>

</resources>