<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/tema">

        <SwitchPreferenceCompat
            app:key="@string/tema_defecto"
            app:title="@string/label_tema_defecto"
            app:defaultValue="true"/>

        <SwitchPreferenceCompat
            app:key="@string/tema_oscuro"
            app:title="@string/label_tema_oscuro" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/guardar_sesion">

        <SwitchPreferenceCompat
            app:key="@string/auto_login"
            app:title="@string/label_auto_login" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/formato">
        
        <EditTextPreference
            app:key="@string/formato_fechas"
            app:title="@string/label_formato_fechas" />

    </PreferenceCategory>

</PreferenceScreen>
