<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_calendario">

    <fragment
        android:id="@+id/nav_calendario"
        android:name="com.example.nima.ui.gallery.GalleryFragment"
        android:label="@string/calendario"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_lista_de_eventos"
        android:name="com.example.nima.ui.eventos.ListaEventos"
        android:label="@string/lista_de_eventos"
        tools:layout="@layout/fragment_lista_eventos" />

    <fragment
        android:id="@+id/nav_formulario_evento"
        android:name="com.example.nima.ui.eventos.FormularioEvento"
        android:label="@string/evento"
        tools:layout="@layout/fragment_formulario_evento" />

    <fragment
        android:id="@+id/nav_lista_de_contactos"
        android:name="com.example.nima.ui.contactos.ListaContactos"
        android:label="@string/lista_de_contactos"
        tools:layout="@layout/fragment_lista_contactos" />

    <fragment
        android:id="@+id/nav_formulario_cliente"
        android:name="com.example.nima.ui.contactos.FormularioCliente"
        android:label="@string/cliente"
        tools:layout="@layout/fragment_formulario_cliente" />

    <fragment
        android:id="@+id/nav_formulario_proveedor"
        android:name="com.example.nima.ui.contactos.FormularioProveedor"
        android:label="@string/proveedor"
        tools:layout="@layout/fragment_formulario_proveedor" />

    <fragment
        android:id="@+id/nav_opciones"
        android:name="com.example.nima.ui.SettingsFragment" />

</navigation>