<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_calendario"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/calendario" />
        <item
            android:id="@+id/nav_lista_de_eventos"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/lista_de_eventos" />
        <item
            android:id="@+id/nav_lista_de_contactos"
            android:icon="?attr/actionModeShareDrawable"
            android:title="@string/lista_de_contactos"
            android:visible="true" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
    </group>

</menu>