<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutFormularioProveedor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.listacontactos.FormularioCliente">

    <TextView
        android:id="@+id/tvTituloProveedor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:text="@string/proveedor"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <EditText
        android:id="@+id/idNombreProveedor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/idEmailProveedor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/idTelefonoProveedor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/telefono"
        android:inputType="phone"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/idDireccionProveedor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/direccion"
        android:inputType="textPostalAddress"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/idProductoProveedor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/producto"
        android:inputType="textUri"
        android:minHeight="48dp" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?colorPrimary"
            android:text="@string/cancelar"
            android:layout_weight="1"  />

        <Button
            android:id="@+id/btnGuardarProveedor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?colorPrimary"
            android:text="@string/guardar"
            android:layout_weight="1"  />
    </LinearLayout>

</LinearLayout>