<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.eventos.FormularioEvento">

    <TextView
        android:id="@+id/tvTituloCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:text="@string/evento"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <EditText
        android:id="@+id/idNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:autofillHints="text"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="text"
        android:minHeight="48dp" />


    <EditText
        android:id="@+id/idDireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:autofillHints="postalAddress"
        android:ems="10"
        android:hint="@string/direccion"
        android:inputType="textPostalAddress"
        android:minHeight="48dp" />


    <EditText
        android:id="@+id/idDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:autofillHints="text"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/descripcion"
        android:inputType="textMultiLine"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/idFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:autofillHints="date"
        android:ems="10"
        android:hint="@string/fecha"
        android:inputType="date"
        android:minHeight="48dp"
        android:clickable="true"
        android:focusable="false"
        tools:ignore="KeyboardInaccessibleWidget" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?colorPrimary"
            android:text="@string/cancelar"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnBorrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?colorError"
            android:text="@string/borrar"
            android:visibility="gone"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?colorPrimary"
            android:text="@string/guardar"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>